--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@parcel/namer-default": "^2.6.2",
     "gatsby": "^4.17.2",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-mdx": "^3.18.0",
